--- a/style.css
+++ b/style.css
@@ -1,11 +1,3 @@
 body {
-    background-color: #FFFFFF;
+    background-color: #dcdcdc;
   }
-
-h2 {
-    color: #FF1493;
-}
-
-h3 {
-    color: #FF1493;
-}
